[gd_scene load_steps=4 format=3 uid="uid://bhhihoa0b168m"]

[ext_resource type="Texture2D" uid="uid://d0iroo4opg1o0" path="res://Assets/Seasonal Tilesets/5 - Misc. universal tiles/Spike.png" id="1_po4yy"]
[ext_resource type="Script" uid="uid://bawsb5hb2n0p" path="res://Script/spikes_area.gd" id="1_x0qkc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_06q5s"]
size = Vector2(10, 13)

[node name="spikes_area" type="Area2D"]
collision_layer = 2
script = ExtResource("1_x0qkc")

[node name="sprite_spike" type="Sprite2D" parent="."]
texture_repeat = 2
texture = ExtResource("1_po4yy")
region_enabled = true
region_rect = Rect2(0, 8, 8, 8)

[node name="collision_spike" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_06q5s")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
